Set up proxying for application assets
This lays the foundations for allowing the proxying of asset paths to
application via the www hostname. This sets up the ability to specify a
hash of paths that will be directly proxied to an application before a
request reaches router.

This is done as part of work to enable HTTP performance improvements for
GOV.UK as address in RFC 115 [1]

[1]: https://github.com/alphagov/govuk-rfcs/blob/45e09c088bfde6c1d4dfb68f9bc1c635f63c9a39/rfc-115-enabling-http2-on-govuk.md

--- a/modules/router/templates/router_include.conf.erb
+++ b/modules/router/templates/router_include.conf.erb
@@ -33,6 +33,17 @@ location ~ ^\/[A-Z]+[A-Z\W\d]+$ {
   rewrite ^(.*)$ https://$host$uri_lowercase permanent;
 }
 
+<%- @app_specific_static_asset_routes.each do |alias_path, vhost_name| -%>
+<%- proxy_host = "#{vhost_name}.#{@app_domain_internal}" -%>
+<%- upstream = "$upstream_#{vhost_name.delete('-')}" -%>
+# Static asset serving for <%= vhost_name %>
+set <%= upstream %> https://<%= proxy_host %>;
+location <%= alias_path %> {
+  proxy_set_header Host <%= proxy_host %>;
+  proxy_pass <%= upstream %>;
+}
+<%- end -%>
+
 location ~ ^/apply-for-a-licence/? {
   # Set proxy timeout to 50 seconds as a quick fix for problems
   # where civica QueryPayments calls are taking too long.
@@ -59,6 +70,7 @@ location ~ ^/contact/govuk(/(|service-feedback(/)?|problem_reports(/)?|foi(/)?|p
   limit_req zone=contact burst=4 nodelay;
   proxy_pass http://varnish;
 }
+
 
 location / {
   <%= scope.function_template(['router/fragments/_basic_auth.erb']) -%>
