Add a guard clause to govuk_pagerduty_drill_start
To avoid running the drill on bank holidays, as I wouldn't expect 2nd
line to be around for the drill.

--- a/modules/monitoring/templates/govuk_pagerduty_drill_start.erb
+++ b/modules/monitoring/templates/govuk_pagerduty_drill_start.erb
@@ -1,3 +1,11 @@
 #!/bin/bash
 
+CURRENT_DATE="$(date -Idate)"
+
+if wget https://www.gov.uk/bank-holidays.json -O - | jq -r ".[\"england-and-wales\"].events | .[].date" | grep -q "$CURRENT_DATE"
+then
+  echo "Skipping as $CURRENT_DATE is a bank holiday"
+  exit 0
+fi
+
 touch "<%= filename %>"
