--- a/modules/govuk/templates/node/s_graphite/remove_old_whisper_data.erb
+++ b/modules/govuk/templates/node/s_graphite/remove_old_whisper_data.erb
@@ -14,6 +14,14 @@ for dir in $whisper_dir/*; do
     rm -rf $dir;
   fi
 done
+
+for dir in stats/timers stats_counts; do
+  find "$whisper_dir/$dir" -maxdepth 1 -name "*ip-*" -type d -print0 | while IFS= read -r -d '' dir; do
+    if [[ ! -z $dir && -z "$(find $dir -mtime -56)" && $? -eq 0 ]]; then
+      rm -rf "$dir";
+    fi
+  done
+done
 <% end -%>
 
 # Delete empty directories
