Update pycsw.cfg with correct url
The response from the `/csw` endpoint is generating `http://localhost` in the XML response when it should be the CKAN site url

--- a/modules/govuk/templates/ckan/pycsw.cfg.erb
+++ b/modules/govuk/templates/ckan/pycsw.cfg.erb
@@ -1,6 +1,6 @@
 [server]
 home=/var/ckan
-url=http://localhost:<%= @pycsw_port %>/csw
+url=<%= @ckan_site_url %>/csw
 mimetype=application/xml; charset=UTF-8
 encoding=UTF-8
 language=en-GB
