Fix some ERB in node_app_deploy.xml.erb
I think the -%> is leading to the last lines being merged together:

  TAG=deployed-to-integrationNOTIFY_RELEASE_APP=false

--- a/modules/govuk_jenkins/templates/node_app_deploy.xml.erb
+++ b/modules/govuk_jenkins/templates/node_app_deploy.xml.erb
@@ -39,7 +39,7 @@
               <properties>TARGET_APPLICATION=<%= app %>
 DEPLOY_TASK=deploy:without_migrations
 TARGET_MACHINES=${TARGET_MACHINES}
-TAG=deployed-to-<%= @environment -%>
+TAG=deployed-to-<%= @environment %>
 NOTIFY_RELEASE_APP=false</properties>
             </hudson.plugins.parameterizedtrigger.PredefinedBuildParameters>
           </configs>
