Let govuk_env_sync run a SQL script before dumping from MySQL.
This ugly hack^W^Wfeature is to facilitate creating the redacted dataset
for the Integration environment without the cost of copying the database
yet again, while keeping the Staging database unredacted for most of
the time (to aid debugging content-related issues).

--- a/modules/govuk_env_sync/templates/govuk_env_sync_job.conf.erb
+++ b/modules/govuk_env_sync/templates/govuk_env_sync_job.conf.erb
@@ -8,3 +8,6 @@ path="<%= @path %>"
 <% if transformation_sql_filename != '' %>
 transformation_sql_file="<%= scope['govuk_env_sync::conf_dir'] %>/transformation_sql/<%= @transformation_sql_filename %>"
 <% end %>
+<% if pre_dump_transformation_sql_filename != '' %>
+pre_dump_transformation_sql_file="<%= scope['govuk_env_sync::conf_dir'] %>/transformation_sql/<%= @pre_dump_transformation_sql_filename %>"
+<% end %>
