Disable enhanced ecommerce data load
This isn't needed on a schedule right now so we can
remove the cron schedule. It'll be needed in future
so I've kept the code here.

--- a/modules/govuk_jenkins/templates/jobs/enhanced_ecommerce.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/enhanced_ecommerce.yaml.erb
@@ -16,8 +16,10 @@
               TARGET_APPLICATION=<%= @target_application %>
               MACHINE_CLASS=search
               RAKE_TASK=analytics:export_indexed_pages_to_google_analytics
+<% if @cron_schedule %>
     triggers:
         - timed: '<%= @cron_schedule %>'
+<% end %>
     publishers:
         - trigger-parameterized-builds:
             - project: Success_Passive_Check
