--- a/modules/govuk_jenkins/templates/jobs/copy_data_from_staging_to_aws.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/copy_data_from_staging_to_aws.yaml.erb
@@ -48,7 +48,7 @@
             set +e
 
             echo "Running Data Sync"
-            /usr/local/bin/with_reboot_lock bash sync staging aws-staging
+            /usr/local/bin/with_reboot_lock env-sync-and-backup_Copy_Data_to_Staging bash sync staging aws-staging
             EXITCODE=$?
 
             exit $EXITCODE
