--- a/modules/govuk_jenkins/templates/jobs/copy_data_to_integration.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/copy_data_to_integration.yaml.erb
@@ -51,7 +51,7 @@
             sed -i "s/PG_TR_DST_ENV_SYNC_PW=PLACEHOLDER/PG_TR_DST_ENV_SYNC_PW='<%= @pg_tr_dst_env_sync_pw %>'/" scripts/sync-transition-postgresql.sh
 
             echo "Syncing data"
-            /usr/local/bin/with_reboot_lock bash sync production integration
+            /usr/local/bin/with_reboot_lock env-sync-and-backup_Copy_Data_to_Integration bash sync production integration
     publishers:
       - trigger-parameterized-builds:
         - project: Success_Passive_Check
