--- a/modules/govuk_unattended_reboot/templates/usr/local/bin/with_reboot_lock.erb
+++ b/modules/govuk_unattended_reboot/templates/usr/local/bin/with_reboot_lock.erb
@@ -2,7 +2,8 @@
 
 set -eu
 
-lock_file="<%= @lock_dir %>/reboot_lock"
+lock_file_name="$1"
+lock_file="<%= @lock_dir %>/$lock_file_name"
 
 function lock() {
   while [ -f $lock_file ]; do
@@ -18,5 +19,7 @@ function unlock() {
 
 lock
 trap "unlock" EXIT
+
+shift # Remove the lock file name from the arguments
 
 "${@}"
