Add reboot_lock prefix to lock files created by with_reboot_lock
So it's easier to identify them as being created by the with_reboot_lock script.

Co-Authored-By: whi-tw <tom.whitwell@digital.cabinet-office.gov.uk>

--- a/modules/govuk_unattended_reboot/templates/usr/local/bin/with_reboot_lock.erb
+++ b/modules/govuk_unattended_reboot/templates/usr/local/bin/with_reboot_lock.erb
@@ -3,7 +3,7 @@
 set -eu
 
 lock_file_name="$1"
-lock_file="<%= @lock_dir %>/$lock_file_name"
+lock_file="<%= @lock_dir %>/reboot_lock-${lock_file_name}"
 
 function lock() {
   while [ -f $lock_file ]; do
