Trigger the Data Sync Complete job in Staging with a timer
The pull for Whitehall starts at 02:30, so give that an hour to
complete and then run.

--- a/modules/govuk_jenkins/templates/jobs/data_sync_complete_staging.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/data_sync_complete_staging.yaml.erb
@@ -9,6 +9,12 @@
     <%- end -%>
     logrotate:
       numToKeep: 10
+    <%- if @aws -%>
+    triggers:
+      - timed: |
+          TZ=Europe/London
+          30 3 * * *
+    <%- end %>
     properties:
       - build-discarder:
           days-to-keep: 30
