Set asset paths to allow more connections
This make the connection and burst limits consistent for asset paths as
the settings on the asset host name. I've done the somewhat lazy thing
here of copying the values over without calculating the exact maths as
to whether these numbers reflect demand.

I've gathered from the comments on the previous commits that these
numbers don't have a whole lot of impact because most of our asset
requests are cached. However, I want to create as little divergence as
possible in this switch over so prefer to keep them as consistent.

--- a/modules/router/templates/router_include.conf.erb
+++ b/modules/router/templates/router_include.conf.erb
@@ -39,6 +39,8 @@ location ~ ^\/[A-Z]+[A-Z\W\d]+$ {
 # Static asset serving for <%= vhost_name %>
 set <%= upstream %> https://<%= proxy_host %>;
 location <%= alias_path %> {
+  limit_req zone=rate burst=10 nodelay;
+  limit_conn connections 10;
   proxy_set_header Host <%= proxy_host %>;
   proxy_pass <%= upstream %>;
 }
