--- a/modules/router/templates/router_include.conf.erb
+++ b/modules/router/templates/router_include.conf.erb
@@ -83,6 +83,7 @@ error_page 403 /403.html;
 error_page 404 401 /404.html;
 error_page 406 /406.html;
 error_page 410 /410.html;
+error_page 422 /422.html;
 error_page 500 502 /500.html;
 error_page 503 /503.html;
 error_page 504 /504.html;
@@ -115,6 +116,10 @@ location /406.html {
   internal;
 }
 location /410.html {
+  root /usr/share/nginx/www;
+  internal;
+}
+location /422.html {
   root /usr/share/nginx/www;
   internal;
 }
