--- a/modules/govuk_jenkins/templates/jobs/deploy_app_downstream.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/deploy_app_downstream.yaml.erb
@@ -20,7 +20,7 @@
           esac
 
           # Check release to deploy is genuine and we're not going backwards
-          GITHUB_API="https://api.github.com/repos/alphagov/$REPO"
+          GITHUB_API="-H 'Authorization: token <%= @github_api_token %>' https://api.github.com/repos/alphagov/$REPO"
           LATEST_TAGS=$(curl -s "$GITHUB_API/tags?per_page=1")
           LATEST_MASTER_SHA=$(curl -s "$GITHUB_API/commits?per_page=1" | jq '.[].sha' | head -1)
           LATEST_TAG_SHA=$(echo "$LATEST_TAGS" | jq '.[].commit.sha' | head -1)
