--- a/modules/govuk_jenkins/templates/jobs/smokey.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/smokey.yaml.erb
@@ -29,6 +29,10 @@
             predefined-parameters: |
                 NSCA_CHECK_DESCRIPTION=<%= @service_description %>
                 NSCA_OUTPUT=<%= @service_description %> failed
+    parameters:
+      - string:
+          name: TARGET_APPLICATION
+          description: Application to target (optional).
     builders:
       - shell: |
           set +x
