Add ckan.harvest.timeout setting to ckan.ini
Add harvest timeout setting to stop long running harvest jobs

Set CKAN harvest timeout to 12 hours

--- a/modules/govuk/templates/ckan/ckan.ini.erb
+++ b/modules/govuk/templates/ckan/ckan.ini.erb
@@ -111,6 +111,7 @@ ckan.harvest.mq.type = redis
 ckan.harvest.mq.hostname = <%= @redis_host%>
 ckan.harvest.mq.port = <%= @redis_port%>
 ckan.harvest.mq.redis_db = 1
+ckan.harvest.timeout = 720  # 12 hours
 
 ckan.redis.url = redis://<%= @redis_host%>:<%= @redis_port%>/1
 
