--- a/modules/govuk/templates/ckan/ckan.ini.erb
+++ b/modules/govuk/templates/ckan/ckan.ini.erb
@@ -111,7 +111,8 @@ ckan.harvest.mq.type = redis
 ckan.harvest.mq.hostname = <%= @redis_host%>
 ckan.harvest.mq.port = <%= @redis_port%>
 ckan.harvest.mq.redis_db = 1
-ckan.harvest.timeout = 720  # 12 hours
+# 12 hours timeout
+ckan.harvest.timeout = 720
 
 ckan.redis.url = redis://<%= @redis_host%>:<%= @redis_port%>/1
 
