Add rewrite rule for /government/assets
Whitehall publisher embeds the path to assets inside content items, an
example of this is in: https://www.gov.uk/government/publications/windrush-lessons-learned-review-information
where there is HTML of:

```
  <div class="attachment-thumb">
      <a aria-hidden="true" class="thumbnail" tabindex="-1" href="/government/publications/windrush-lessons-learned-review-information/windrush-lessons-learned-review-independent-advisory-group-membership-list-and-biographies"><img alt="" src="/government/assets/pub-cover-html-b0465911e56983d98c70f0e25fba24bc206d37e8c83d4addf6421dcf6022c6cd.png"></a>
  </div>
```

When changing the asset host from assets.publishing.service.gov.uk to
www.gov.uk I expected to find assets that were hosted on
https://assets.publishing.service.gov.uk/government/assets/* as per
other Whitehall assets, finding some on www.gov.uk/government/assets was
it self as a surprise. These assets shouldn't actually have been
working, I'll explain why at the end of this commit.

Since there are a lot of assets embedded with /government/assets I
thought it'd be more prudent to set an nginx internal rewrite than an
actual redirect to avoid creating a huge mass of redirects.

I've said this many times in many places now, but the whole thing of
Whitehall embedding assets into content items is an awful situation that
leaves a trail of smells like this change here.

Anyway... how did the www.gov.uk/government/assets even work?

These assets shouldn't have worked as there isn't a proxy pass set up
for requests to www.gov.uk/government/assets to Whitehall, so they
shouldn't have been served. However we have a curious part of GOV.UK
that is a source of confusion: the /government prefix route [1].

Because of this route these assets were still served. They worked by
router accepting the request for an asset path and then proxying that to
Whitehall.

[1]: https://www.gov.uk/api/content/government

--- a/modules/router/templates/router_include.conf.erb
+++ b/modules/router/templates/router_include.conf.erb
@@ -33,6 +33,14 @@ location ~ ^\/[A-Z]+[A-Z\W\d]+$ {
   rewrite ^(.*)$ https://$host$uri_lowercase permanent;
 }
 
+# Rewrite the path of legacy Whitehall assets.
+# Whitehall writes paths to the applications assets inside content items, which
+# can make it very hard to change the URL. This rewrites any request to
+# /government/assets/* to the new path of /assets/whitehall. A redirect isn't
+# used because there are lots of these and this would cause a substantial
+# number of extra requests.
+rewrite ^/government/assets/(.*)$ /assets/whitehall/$1;
+
 <%- @app_specific_static_asset_routes.each do |alias_path, vhost_name| -%>
 <%- proxy_host = "#{vhost_name}.#{@app_domain_internal}" -%>
 <%- upstream = "$upstream_#{vhost_name.delete('-')}" -%>
